[gd_scene load_steps=24 format=2]

[ext_resource path="res://themes/vrworkout_theme.theme" type="Theme" id=1]
[ext_resource path="res://fonts/Droid_Sans_Bold_Big.tres" type="DynamicFont" id=2]
[ext_resource path="res://fonts/Droid_Sans_Bold_medium.tres" type="DynamicFont" id=3]
[ext_resource path="res://fonts/Droid_Sans_Regular_medium.tres" type="DynamicFont" id=4]
[ext_resource path="res://fonts/Droid_Sans_Regular_big.tres" type="DynamicFont" id=5]
[ext_resource path="res://scripts/Onboarding.gd" type="Script" id=6]
[ext_resource path="res://scripts/3rdparty/onboarding/assets/slide1.png" type="Texture" id=7]
[ext_resource path="res://scripts/3rdparty/onboarding/assets/slide3.png" type="Texture" id=8]
[ext_resource path="res://scripts/3rdparty/onboarding/assets/slide2.png" type="Texture" id=9]
[ext_resource path="res://scripts/3rdparty/onboarding/assets/slide4.png" type="Texture" id=10]
[ext_resource path="res://scripts/3rdparty/onboarding/assets/slide5.png" type="Texture" id=11]
[ext_resource path="res://scripts/3rdparty/onboarding/assets/slide6.png" type="Texture" id=12]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[node name="Onboarding" type="Control"]
script = ExtResource( 6 )
__meta__ = {
"_edit_horizontal_guides_": [ 208.137, 322.79, 446.262, 452.561, 349.248 ],
"_edit_use_anchors_": false,
"_edit_vertical_guides_": [ 655.483, 382.62 ]
}

[node name="TabContainer" type="TabContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1280.0
margin_bottom = 720.0
theme = ExtResource( 1 )
custom_styles/panel = SubResource( 1 )
tabs_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Onboarding1" type="Tabs" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="RichTextLabel" type="RichTextLabel" parent="TabContainer/Onboarding1"]
visible = false
anchor_left = 0.009
anchor_top = 0.019
anchor_right = 0.953
anchor_bottom = 0.785
margin_left = 16.7661
margin_top = 183.714
margin_right = 22.5501
margin_bottom = -93.29
custom_fonts/bold_italics_font = ExtResource( 2 )
custom_fonts/bold_font = ExtResource( 3 )
custom_fonts/normal_font = ExtResource( 4 )
bbcode_enabled = true
bbcode_text = "[i][b]We are very happy to have you in our VR workout app called VRWorkout[/b][/i]   [img]res://assets/winking_smiley.png[/img]
"
text = "We are very happy to have you in our VR workout app called VRWorkout   
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="TabContainer/Onboarding1"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Onboarding2" type="Tabs" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TextureRect" type="TextureRect" parent="TabContainer/Onboarding2"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="TabContainer/Onboarding2"]
visible = false
anchor_left = 0.009
anchor_top = 0.019
anchor_right = 0.953
anchor_bottom = 0.785
margin_left = 16.874
margin_top = 15.714
margin_right = 22.658
margin_bottom = 9.70999
custom_fonts/bold_italics_font = ExtResource( 2 )
custom_fonts/bold_font = ExtResource( 3 )
custom_fonts/normal_font = ExtResource( 5 )
bbcode_enabled = true
bbcode_text = "[center]Meet your portable home trainer VRWorkout![/center]"
text = "Meet your portable home trainer VRWorkout!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Onboarding3" type="Tabs" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="RichTextLabel" type="RichTextLabel" parent="TabContainer/Onboarding3"]
anchor_left = 0.009
anchor_top = 0.019
anchor_right = 0.953
anchor_bottom = 0.785
margin_left = 16.874
margin_top = 15.714
margin_right = 22.658
margin_bottom = 9.70999
custom_fonts/bold_italics_font = ExtResource( 2 )
custom_fonts/bold_font = ExtResource( 3 )
custom_fonts/normal_font = ExtResource( 5 )
bbcode_enabled = true
bbcode_text = "[center]A quick intro to how VRWorkout works[/center]"
text = "A quick intro to how VRWorkout works"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="TabContainer/Onboarding3"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Onboarding4" type="Tabs" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="RichTextLabel" type="RichTextLabel" parent="TabContainer/Onboarding4"]
visible = false
anchor_left = 0.009
anchor_top = 0.019
anchor_right = 0.953
anchor_bottom = 0.785
margin_left = 16.874
margin_top = 15.714
margin_right = 22.658
margin_bottom = 9.70999
custom_fonts/bold_italics_font = ExtResource( 2 )
custom_fonts/bold_font = ExtResource( 3 )
custom_fonts/normal_font = ExtResource( 5 )
bbcode_enabled = true
bbcode_text = "[center]Now for a taste of the experience[/center]"
text = "Now for a taste of the experience"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="TabContainer/Onboarding4"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 10 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Onboarding5" type="Tabs" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="RichTextLabel" type="RichTextLabel" parent="TabContainer/Onboarding5"]
visible = false
anchor_left = 0.009
anchor_top = 0.019
anchor_right = 0.953
anchor_bottom = 0.785
margin_left = 16.874
margin_top = 15.714
margin_right = 22.658
margin_bottom = 9.70999
custom_fonts/bold_italics_font = ExtResource( 2 )
custom_fonts/bold_font = ExtResource( 3 )
custom_fonts/normal_font = ExtResource( 5 )
bbcode_enabled = true
bbcode_text = "[center]Other important things you should know[/center]"
text = "Other important things you should know"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="TabContainer/Onboarding5"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 11 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Onboarding6" type="Tabs" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="RichTextLabel" type="RichTextLabel" parent="TabContainer/Onboarding6"]
visible = false
anchor_left = 0.009
anchor_top = 0.019
anchor_right = 0.953
anchor_bottom = 0.785
margin_left = 16.874
margin_top = 15.714
margin_right = 22.658
margin_bottom = 9.70999
custom_fonts/bold_italics_font = ExtResource( 2 )
custom_fonts/bold_font = ExtResource( 3 )
custom_fonts/normal_font = ExtResource( 5 )
bbcode_enabled = true
bbcode_text = "[center]Other important things you should know[/center]"
text = "Other important things you should know"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="TabContainer/Onboarding6"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 12 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Next" type="Button" parent="."]
anchor_right = 0.099
margin_left = 359.0
margin_top = 422.0
margin_right = 529.0
margin_bottom = 485.0
theme = ExtResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Previous" type="Button" parent="."]
anchor_right = 0.099
margin_left = 151.0
margin_top = 422.0
margin_right = 321.0
margin_bottom = 485.0
theme = ExtResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SkipIntro" type="Button" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 155.0
margin_top = 568.0
margin_right = 319.0
margin_bottom = 628.0
theme = ExtResource( 1 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 9 )
custom_styles/disabled = SubResource( 10 )
custom_styles/normal = SubResource( 11 )
custom_fonts/font = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Next" to="." method="_on_Next_pressed"]
[connection signal="pressed" from="Previous" to="." method="_on_Previous_pressed"]
[connection signal="pressed" from="SkipIntro" to="." method="_on_SkipIntro_pressed"]
